[gd_scene load_steps=6 format=3 uid="uid://ge4amcb4lbo8"]

[ext_resource type="Script" path="res://scripts/memory.gd" id="1_7t7mp"]
[ext_resource type="Script" path="res://scripts/MemoryText.gd" id="1_knhlb"]
[ext_resource type="Shader" path="res://shaders/pause_menu.gdshader" id="2_0fr2w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jn5xw"]
shader = ExtResource("2_0fr2w")
shader_parameter/amount = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_p2ujc"]
font_size = 27
shadow_size = 2

[node name="Memory" type="Control"]
light_mask = 4
visibility_layer = 4
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_7t7mp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jn5xw")
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -1088.0
offset_right = -8.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.219501, 0.219501, 0.219501, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ColorRect"]
light_mask = 4
visibility_layer = 4
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -880.0
offset_top = -664.0
offset_right = 856.0
offset_bottom = -518.0
grow_horizontal = 2
grow_vertical = 0
columns = 3

[node name="Main menu" type="Button" parent="CanvasLayer/ColorRect/GridContainer"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
focus_neighbor_left = NodePath("../Next level")
focus_neighbor_right = NodePath("../Level select")
focus_next = NodePath("../Level select")
focus_previous = NodePath("../Next level")
text = "Back to menu"

[node name="Level select" type="Button" parent="CanvasLayer/ColorRect/GridContainer"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
focus_neighbor_left = NodePath("../Main menu")
focus_neighbor_right = NodePath("../Next level")
focus_next = NodePath("../Next level")
focus_previous = NodePath("../Main menu")
text = "Level select"

[node name="Next level" type="Button" parent="CanvasLayer/ColorRect/GridContainer"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
focus_neighbor_left = NodePath("../Level select")
focus_neighbor_right = NodePath("../Main menu")
focus_next = NodePath("../Main menu")
focus_previous = NodePath("../Level select")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
light_mask = 4
visibility_layer = 4
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -656.0
offset_top = 80.0
offset_right = 640.0
offset_bottom = 640.0
grow_horizontal = 2

[node name="MemoryImage" type="TextureRect" parent="CanvasLayer/ColorRect/VBoxContainer"]
unique_name_in_owner = true
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="MemoryTitle" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
unique_name_in_owner = true
light_mask = 4
visibility_layer = 4
layout_mode = 2
label_settings = SubResource("LabelSettings_p2ujc")
horizontal_alignment = 1

[node name="MemoryText" type="RichTextLabel" parent="CanvasLayer/ColorRect/VBoxContainer"]
unique_name_in_owner = true
light_mask = 4
visibility_layer = 4
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
script = ExtResource("1_knhlb")

[connection signal="pressed" from="CanvasLayer/ColorRect/GridContainer/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/GridContainer/Level select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/GridContainer/Next level" to="." method="_on_next_level_pressed"]
[connection signal="gui_input" from="CanvasLayer/ColorRect/VBoxContainer/MemoryText" to="CanvasLayer/ColorRect/VBoxContainer/MemoryText" method="_on_gui_input"]
